--- a/ansible/roles/base_setup/tasks/main.yml
+++ b/ansible/roles/base_setup/tasks/main.yml
@@ -174,6 +174,18 @@
         }
       }
 
+# LDAP/FreeIPA Client Configuration
+# Enroll all servers with FreeIPA for centralized authentication
+- name: Include LDAP client configuration
+  include_role:
+    name: ldap-config
+  when:
+    - freeipa_server_ip is defined
+    - freeipa_server_ip | length > 0
+    - freeipa_admin_password is defined
+    - freeipa_admin_password | length > 0
+    - target_hostname != 'freeipa'  # Don't enroll FreeIPA server with itself
+
 # Octopus Deploy Tentacle Installation
 # Every VM should be registered with Octopus for deployment orchestration
 - name: Include Octopus Tentacle installation
