--- a/examples/caller-provision-freeipa.yml
+++ b/examples/caller-provision-freeipa.yml
@@ -27,8 +27,8 @@ jobs:
       disk_gb: '20'
       
       # LXC configuration
-      lxc_template: 'local:vztmpl/ubuntu-22.04-standard_22.04-1_amd64.tar.zst'
-      lxc_unprivileged: true
+      lxc_template: 'local:vztmpl/debian-12-standard_12.12-1_amd64.tar.zst'
+      lxc_unprivileged: true  # Must be true for Tailscale keyctl support
       lxc_nesting: false
       
       # Infrastructure
