--- a/.github/workflows/reusable-provision.yml
+++ b/.github/workflows/reusable-provision.yml
@@ -374,16 +374,23 @@ jobs:
           fi
           
           # Run playbook with all integrations (Tailscale, LDAP, Octopus, Grafana)
-          # Note: LXC runs as root, VMs run as deploy user (created by cloud-init)
+          # Note: LXC runs as root (no become needed), VMs run as deploy user (needs become)
+          BECOME_FLAG=""
+          if [ "${{ inputs.resource_type }}" = "vm" ]; then
+            BECOME_FLAG="--become"
+          fi
+          
           echo "Running Ansible playbook as $ANSIBLE_USER..."
           ansible-playbook -i "${{ inputs.vm_target_ip }}," site.yml \
             --user $ANSIBLE_USER \
+            $BECOME_FLAG \
             --ssh-common-args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null' \
             --extra-vars "target_hostname=${{ inputs.app_name }}" \
             --extra-vars "vlan_tag=${{ inputs.vlan_tag }}" \
             --extra-vars "app_role_name=${{ inputs.app_name }}" \
             --extra-vars "octopus_environment=${{ inputs.octopus_environment }}" \
             --extra-vars "octopus_roles=$OCTOPUS_ROLES_JSON" \
+            --extra-vars "skip_octopus=${{ inputs.skip_octopus }}" \
             --extra-vars "freeipa_server_ip=${FREEIPA_SERVER_IP:-}" \
             --extra-vars "freeipa_admin_password=${FREEIPA_ADMIN_PASSWORD:-}"
           
