--- a/examples/caller-provision-freeipa.yml
+++ b/examples/caller-provision-freeipa.yml
@@ -27,8 +27,8 @@ jobs:
       disk_gb: '20'
       
       # LXC configuration
-      # Using Fedora 42 for native FreeIPA packages (includes SSH by default)
-      lxc_template: 'local:vztmpl/fedora-42-default_20250428_amd64.tar.xz'
+      # Using CentOS Stream 9 for stable FreeIPA support (Python 3.9)
+      lxc_template: 'local:vztmpl/centos-9-stream-default_20240828_amd64.tar.xz'
       lxc_unprivileged: true  # Must be true for Tailscale keyctl support
       lxc_nesting: false      # Not needed - native packages, no Docker required
       
