--- a/ansible/roles/freeipa/tasks/main.yml
+++ b/ansible/roles/freeipa/tasks/main.yml
@@ -17,13 +17,19 @@
   set_fact:
     is_rhel: "{{ ansible_os_family == 'RedHat' }}"
 
+- name: Generate FreeIPA admin password
+  set_fact:
+    freeipa_admin_password: "{{ lookup('password', '/dev/null chars=ascii_letters,digits,punctuation length=20') }}"
+
+- name: Generate FreeIPA DS password
+  set_fact:
+    freeipa_ds_password: "{{ lookup('password', '/dev/null chars=ascii_letters,digits,punctuation length=20') }}"
+
 - name: Set FreeIPA facts
   set_fact:
     freeipa_domain: "kora.ldap.local"
     freeipa_realm: "KORA.LDAP.LOCAL"
     freeipa_hostname: "{{ ansible_fqdn | default(ansible_hostname + '.' + freeipa_domain) }}"
-    freeipa_admin_password: "{{ lookup('password', '/tmp/freeipa_admin_password chars=ascii_letters,digits length=16') }}"
-    freeipa_ds_password: "{{ lookup('password', '/tmp/freeipa_ds_password chars=ascii_letters,digits length=16') }}"
 
 - name: Display generated passwords
   debug:
