--- a/ansible/roles/freeipa/tasks/main.yml
+++ b/ansible/roles/freeipa/tasks/main.yml
@@ -17,28 +17,28 @@
   set_fact:
     is_rhel: "{{ ansible_os_family == 'RedHat' }}"
 
-- name: Generate and save FreeIPA admin password
+- name: Generate FreeIPA admin password
+  shell: |
+    if [ ! -f /tmp/freeipa_admin_password ]; then
+      tr -dc 'A-Za-z0-9' < /dev/urandom | head -c 10 > /tmp/freeipa_admin_password
+    fi
+    cat /tmp/freeipa_admin_password
+  register: admin_password_result
+  changed_when: false
+
+- name: Generate FreeIPA DS password
+  shell: |
+    if [ ! -f /tmp/freeipa_ds_password ]; then
+      tr -dc 'A-Za-z0-9' < /dev/urandom | head -c 10 > /tmp/freeipa_ds_password
+    fi
+    cat /tmp/freeipa_ds_password
+  register: ds_password_result
+  changed_when: false
+
+- name: Set password facts
   set_fact:
-    freeipa_admin_password: "{{ lookup('password', '/tmp/freeipa_admin_password chars=ascii_letters,digits length=10') }}"
-
-- name: Generate and save FreeIPA DS password
-  set_fact:
-    freeipa_ds_password: "{{ lookup('password', '/tmp/freeipa_ds_password chars=ascii_letters,digits length=10') }}"
-
-- name: Read admin password from file
-  slurp:
-    src: /tmp/freeipa_admin_password
-  register: admin_password_file
-
-- name: Read DS password from file
-  slurp:
-    src: /tmp/freeipa_ds_password
-  register: ds_password_file
-
-- name: Set password facts from files
-  set_fact:
-    freeipa_admin_password: "{{ admin_password_file.content | b64decode | trim }}"
-    freeipa_ds_password: "{{ ds_password_file.content | b64decode | trim }}"
+    freeipa_admin_password: "{{ admin_password_result.stdout }}"
+    freeipa_ds_password: "{{ ds_password_result.stdout }}"
 
 - name: Set FreeIPA facts
   set_fact:
