--- a/ansible/roles/freeipa/tasks/main.yml
+++ b/ansible/roles/freeipa/tasks/main.yml
@@ -30,6 +30,10 @@
   debug:
     msg: "Admin password stdout: '{{ admin_password_result.stdout }}' (length: {{ admin_password_result.stdout | length }})"
 
+- name: Debug full admin_password_result variable
+  debug:
+    var: admin_password_result
+
 - name: Generate FreeIPA DS password
   shell: |
     if [ ! -f /tmp/freeipa_ds_password ]; then
@@ -47,8 +51,8 @@
   set_fact:
     freeipa_domain: "kora.ldap.local"
     freeipa_realm: "KORA.LDAP.LOCAL"
-    freeipa_admin_password: "{{ admin_password_result.stdout | trim }}"
-    freeipa_ds_password: "{{ ds_password_result.stdout | trim }}"
+    freeipa_admin_password: "{{ admin_password_result.stdout }}"
+    freeipa_ds_password: "{{ ds_password_result.stdout }}"
     freeipa_hostname: "{{ ansible_hostname }}.kora.ldap.local"
 
 - name: Debug facts immediately after set_fact
