--- a/ansible/roles/freeipa/tasks/main.yml
+++ b/ansible/roles/freeipa/tasks/main.yml
@@ -26,14 +26,6 @@
   register: admin_password_result
   changed_when: false
 
-- name: Debug admin password result
-  debug:
-    msg: "Admin password stdout: '{{ admin_password_result.stdout }}' (length: {{ admin_password_result.stdout | length }})"
-
-- name: Debug full admin_password_result variable
-  debug:
-    var: admin_password_result
-
 - name: Generate FreeIPA DS password
   shell: |
     if [ ! -f /tmp/freeipa_ds_password ]; then
@@ -43,24 +35,13 @@
   register: ds_password_result
   changed_when: false
 
-- name: Debug DS password result
-  debug:
-    msg: "DS password stdout: '{{ ds_password_result.stdout }}' (length: {{ ds_password_result.stdout | length }})"
-
 - name: Set all FreeIPA facts
   set_fact:
     freeipa_domain: "kora.ldap.local"
     freeipa_realm: "KORA.LDAP.LOCAL"
     ipa_admin_password: "{{ admin_password_result.stdout }}"
     ipa_ds_password: "{{ ds_password_result.stdout }}"
-    freeipa_hostname: "{{ ansible_hostname }}.kora.ldap.local"
-
-- name: Debug facts immediately after set_fact
-  debug:
-    msg:
-      - "Admin password after set_fact: '{{ ipa_admin_password }}'"
-      - "DS password after set_fact: '{{ ipa_ds_password }}'"
-      - "Hostname after set_fact: '{{ freeipa_hostname }}'"
+    freeipa_hostname: "{{ target_hostname }}.{{ freeipa_domain }}"
 
 - name: Display generated passwords
   debug:
