feat: standardize domain to pmx.koramaple.com for all VMs, LXC, and FreeIPA

--- a/ansible/roles/freeipa/defaults/main.yml
+++ b/ansible/roles/freeipa/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
 # FreeIPA Server default variables
-freeipa_domain: "kora.ldap.local"
-freeipa_realm: "KORA.LDAP.LOCAL"
+freeipa_domain: "pmx.koramaple.com"
+freeipa_realm: "PMX.KORAMAPLE.COM"
