feat: use Tailscale MagicDNS domain (tail09bdcf.ts.net) for FreeIPA and LDAP

--- a/ansible/roles/freeipa/defaults/main.yml
+++ b/ansible/roles/freeipa/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
 # FreeIPA Server default variables
-freeipa_domain: "pmx.koramaple.com"
-freeipa_realm: "PMX.KORAMAPLE.COM"
+freeipa_domain: "tail09bdcf.ts.net"
+freeipa_realm: "TAIL09BDCF.TS.NET"
