--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -25,6 +25,12 @@
     - role: base_setup
       when: app_role_name is not defined or app_role_name == "" or app_role_name != "mgmt-docker"
     
+    # Configure LDAP client on all VMs/CTs (except FreeIPA server itself)
+    - role: ldap-config
+      when: 
+        - app_role_name is not defined or app_role_name != "freeipa"
+        - freeipa_admin_password is defined
+    
     # This role only runs if you pass an app_role_name from GitHub
     - role: "{{ app_role_name }}"
       when: app_role_name is defined and app_role_name != ""
